clusters/home-k8s/istio/ingress/istio-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    toolkit.fluxcd.io/tenant: ingress
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: k8s-gateway
  namespace: istio-ingress
spec:
  selector:
    app: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.homek8s.polecatworks.com"
